--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "magento-hackathon/magento-composer-installer": "3.0.*",
+        "magento-hackathon/magento-composer-installer": "*",
         "goaop/framework": "1.0.*",
         "mikey179/vfsStream": "1.4.*"
     },
@@ -18,10 +18,6 @@
          "ecomdev/ecomdev_phpunit": "0.3.*"
     },
     "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/Cotya/magento-composer-installer"
-        },
         {
             "type": "vcs",
             "url": "https://github.com/EcomDev/EcomDev_PHPUnit.git"
